Fixed teknik on small screen sizes

--- a/CODE/css/min768.css
+++ b/CODE/css/min768.css
@@ -557,18 +557,5 @@
     }
 }
 .coverphoto {
-    display:inline;
-    width: 100%;
-    max-height: 15%;
-    margin-bottom: 30px;
-    margin-top: -80px;    
-    height: auto;
-    display: block;
-    position: relative;
-    background-attachment: fixed;
-    -webkit-background-size: cover;
-    -moz-background-size: cover;
-    -o-background-size: cover;
-    background-size: cover;
-    -ms-behavior: url(../js/backgroundsize.htc);
+   
 }
