--- a/CODE/css/style.css
+++ b/CODE/css/style.css
@@ -1121,8 +1121,20 @@ section {
 }
 
 .coverphoto {
-    width: 230px;
-    margin-right: 40px;
+    display: inline;
+    width: 100%;
+    max-height: 15%;
+    margin-bottom: 30px;
+    margin-top: -80px;
+    height: auto;
+    display: block;
+    position: relative;
+    background-attachment: fixed;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
+    -ms-behavior: url(../js/backgroundsize.htc);
 }
 
 .description {
@@ -1136,7 +1148,4 @@ section {
     box-shadow: 0 2px 2px rgba(1, 1, 1, 0.2);
 }
 
-#teknik {
-}
-
->>>>>>> d79fd45a1d9c45872438253415482c6f7b77bd72
+#teknik {}
